--- a/src/FCP.Swashbuckle.AspNetCore.SwaggerGen.Versioning/FCP.Swashbuckle.AspNetCore.SwaggerGen.Versioning.csproj
+++ b/src/FCP.Swashbuckle.AspNetCore.SwaggerGen.Versioning/FCP.Swashbuckle.AspNetCore.SwaggerGen.Versioning.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>1.0.0</Version>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <Authors>wanlitao</Authors>
+    <Description>Swashbuckle AspNetCore SwaggerGen Versioning Extensions</Description>
+    <Company>GreatBillows</Company>
+    <Copyright>Copyright © GreatBillows 2017</Copyright>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <PackageProjectUrl>https://github.com/wanlitao/Swashbuckle.AspNetCore.Extensions</PackageProjectUrl>
+    <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</PackageLicenseUrl>
   </PropertyGroup>
 
   <ItemGroup>
