--- a/src/FCP.Swashbuckle.AspNetCore.SwaggerUI.Versioning/FCP.Swashbuckle.AspNetCore.SwaggerUI.Versioning.csproj
+++ b/src/FCP.Swashbuckle.AspNetCore.SwaggerUI.Versioning/FCP.Swashbuckle.AspNetCore.SwaggerUI.Versioning.csproj
@@ -1,10 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.0.0</Version>
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-    <FileVersion>1.0.0.0</FileVersion>
+    <Version>1.0.1</Version>
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <FileVersion>1.0.1.0</FileVersion>
     <Authors>wanlitao</Authors>
     <Description>Swashbuckle AspNetCore SwaggerUI Versioning Extensions</Description>
     <Company>GreatBillows</Company>
