--- a/src/FCP.Swashbuckle.AspNetCore.Swagger/FCP.Swashbuckle.AspNetCore.Swagger.csproj
+++ b/src/FCP.Swashbuckle.AspNetCore.Swagger/FCP.Swashbuckle.AspNetCore.Swagger.csproj
@@ -2,20 +2,20 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.0</Version>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
-    <FileVersion>1.1.0.0</FileVersion>
+    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
     <Authors>wanlitao</Authors>
     <Description>Swashbuckle AspNetCore Swagger Extensions</Description>
     <Company>GreatBillows</Company>
-    <Copyright>Copyright © GreatBillows 2018</Copyright>
+    <Copyright>Copyright © GreatBillows 2020</Copyright>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/wanlitao/Swashbuckle.AspNetCore.Extensions</PackageProjectUrl>
     <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</PackageLicenseUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="4.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.0.0-rc5" />
   </ItemGroup>
 
 </Project>
