--- a/src/FCP.Swashbuckle.AspNetCore.SwaggerGen.Versioning/FCP.Swashbuckle.AspNetCore.SwaggerGen.Versioning.csproj
+++ b/src/FCP.Swashbuckle.AspNetCore.SwaggerGen.Versioning/FCP.Swashbuckle.AspNetCore.SwaggerGen.Versioning.csproj
@@ -1,22 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>1.1.0</Version>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
-    <FileVersion>1.1.0.0</FileVersion>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Version>2.0.0</Version>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
+    <FileVersion>2.0.0.0</FileVersion>
     <Authors>wanlitao</Authors>
     <Description>Swashbuckle AspNetCore SwaggerGen Versioning Extensions</Description>
     <Company>GreatBillows</Company>
-    <Copyright>Copyright © GreatBillows 2017</Copyright>
+    <Copyright>Copyright © GreatBillows 2020</Copyright>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/wanlitao/Swashbuckle.AspNetCore.Extensions</PackageProjectUrl>
     <PackageLicenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</PackageLicenseUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="3.0.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="4.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Versioning.ApiExplorer" Version="4.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="5.0.0-rc5" />
   </ItemGroup>
 
 </Project>
